# handler/updateOpening.go
@@ -8,6 +8,21 @@ import (
 	"github.com/nathanfabio/goOpportunities/schemas"
 )
 
+
+// @BasePath /api/v1
+
+// @Summary Update Opening
+// @Description Update a job opening
+// @Tags openings
+// @Accept json
+// @Produce json
+// @Param id query string  true "Opening Identification"
+// @Param opening body UpdateOpeningRequest true "Opening data to update"
+// @Success 200 {object} UpdateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [put]
 func UpdateOpeningHandler(ctx *gin.Context) {
 	request := UpdateOpeningRequest{}
 
